# llmmllab-runner

./: .env.example  .gitignore  .gitmodules  .models.example.yaml  .models.small.yaml  .models.yaml  CLAUDE.md  Dockerfile  Makefile  PR_REVIEW_STATE.json  README.md  app.py  cache.py  config.py  generate_models_yaml.py  pyproject.toml  pyrightconfig.json  queue.py
.claude/memory/: runner-deploy-guard-and-qwen-degeneration.md
.github/: CODEOWNERS
.github/workflows/: ci.yml  deploy.yml
docs/: TODO-multimodal-slot-save.md
k8s/: apply.sh  deployment.yaml  prometheus-config.yaml  pvc.yaml  referencegrant.yaml  registry-cleanup-cronjob.yaml  service-small.yaml  service.yaml
middleware/: __init__.py  prometheus_metrics.py  request_id.py  runner_metrics.py  tracing.py
models/: __init__.py  lora_weight.py  model.py  model_details.py  model_parameters.py  model_profile_image_settings.py  model_provider.py  model_task.py  user_config.py
pipelines/: _gpu_select.py  base.py
pipelines/img23d/: hunyuan3d.py  trellis.py
pipelines/img23d_part/: __init__.py  hunyuan3d_part.py
pipelines/mesh2parts/: hunyuan3d_part.py
pipelines/rembg/: rmbg.py
proxy/: router.py
routers/: metrics.py  model_status.py  models.py  pipelines.py  servers.py  status.py
scripts/: check_errors.py  registry_cleanup.py  runner_shutdown.sh
scripts/git-hooks/: pre-commit
server_manager/: __init__.py  base.py  llamacpp.py  llamacpp_argument_builder.py  sd_cpp.py  sd_cpp_argument_builder.py
tests/: test_context_guard.py  test_ctx_reduction_limit.py  test_error_messaging.py  test_estimate_model_size.py  test_img23d_part_pipeline.py  test_img23d_pipeline.py  test_infer_repo.py  test_mesh2parts_pipeline.py  test_placeholder.py  test_priority_queue.py  test_proxy_router_incomplete_chunk.py  test_rembg_pipeline.py  test_sd_cpp_server.py  test_slot_persistence.py  test_thermal_mitigation.py  test_vram_eviction.py
utils/: dcgm_metrics.py  hardware_manager.py  llama_metrics.py  logging.py  model_loader.py
